--- a/plano-player/src/style.css
+++ b/plano-player/src/style.css
@@ -49,7 +49,7 @@ body {
   justify-content: space-between;
 }
 
-#speedRange {
+#speed-range {
   width: 100%;
   height: 30px;
   -webkit-appearance: none;
@@ -59,7 +59,7 @@ body {
   border-radius: 5px;
 }
 
-#speedRange::-webkit-slider-thumb {
+#speed-range::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 32px;
   height: 32px;
@@ -69,7 +69,7 @@ body {
   border: none;
 }
 
-#speedRange::-moz-range-thumb {
+#speed-range::-moz-range-thumb {
   width: 32px;
   height: 32px;
   background: url("./icon/musical-note.png") no-repeat center;
@@ -218,12 +218,12 @@ body {
   border-radius: 5px;
 }
 
-#recordingStatus {
+#recording-status {
   color: #f44336;
   font-weight: bold;
 }
 
-#playbackStatus {
+#playback-status {
   color: #2196f3;
   font-weight: bold;
 }
